# edflib

./: CMakeLists.txt  EDFFile.cpp  EDFParser.cpp  EDFUtil.cpp  EDFUtil.h  README.md  edf2h5.cpp  test.cpp
